src/test/ui/borrowck/issue-54597-reject-move-out-of-borrow-via-pat.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-54597-reject-move-out-of-borrow-via-pat.rs:16:13
   |
LL |             *array
   |             ^^^^^^
   |             |
   |             cannot move out of borrowed content
   |             help: consider removing the `*`: `array`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
